Fix PVGIS CORS error via Vercel Edge proxy rewrite

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,10 @@
 {
     "rewrites": [
         {
+            "source": "/api/pvgis/:match*",
+            "destination": "https://re.jrc.ec.europa.eu/api/:match*"
+        },
+        {
             "source": "/(.*)",
             "destination": "/index.html"
         }
